--- a/base/index.html
+++ b/base/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="./app.js" defer></script>
+    <script src="./scripts/send-message.js" defer></script>
 </head>
 <body>
     
