--- a/base/index.html
+++ b/base/index.html
@@ -13,16 +13,29 @@
 
 
 
+    <div class="main-content">
+        <!--Ide a többi kódot -->
+    </div>
+
+
 <div class="login">
     
     <div class="textContent">
-        <h2>LOGIN</h2>
+        <h2>Welcome back!</h2>
+        <p>We're excited to see you again!</p>
+        <h5>Username</h5>
         <input type="text" placeholder="Username">
         <div class="button">
-            <a href="#"><span>Button</Button></span></a>
+            <a href="#"><span>Login</Button></span></a>
         </div>
     </div>
+    <div class="theme-switch">
+        <a href=""><h5></h5></a>
+        <a href=""><h5></h5></a>
+        <a href=""><h5></h5></a>
+    </div>
 </div>
+
 
 </body>
 </html>
