--- a/base/index.html
+++ b/base/index.html
@@ -6,9 +6,40 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script src="./app.js" defer></script>
+    <script type="module" src="./app.js" defer></script>
 </head>
 <body>
-    
+   
+    <div class="container content">
+        <div class="left-side">
+            <div class="channels">
+                <div class="channel-item">
+                    <img src="https://cdn.discordapp.com/attachments/1106712720742568006/1304856650032746588/image.png?ex=6730e9f4&is=672f9874&hm=06ec4b25889dd73081776a2d159c9ce5b5e1570e2fbab324533683bcebdd4c98&" alt="">
+                </div>
+                <div class="channel-item">
+                    <img src="https://cdn.discordapp.com/attachments/1106712720742568006/1304856650032746588/image.png?ex=6730e9f4&is=672f9874&hm=06ec4b25889dd73081776a2d159c9ce5b5e1570e2fbab324533683bcebdd4c98&" alt="">
+                </div>
+                <div class="channel-item">
+                    <img src="https://cdn.discordapp.com/attachments/1106712720742568006/1304856650032746588/image.png?ex=6730e9f4&is=672f9874&hm=06ec4b25889dd73081776a2d159c9ce5b5e1570e2fbab324533683bcebdd4c98&" alt="">
+                </div>
+                <div class="channel-item">
+                    <img src="https://cdn.discordapp.com/attachments/1106712720742568006/1304856650032746588/image.png?ex=6730e9f4&is=672f9874&hm=06ec4b25889dd73081776a2d159c9ce5b5e1570e2fbab324533683bcebdd4c98&" alt="">
+                </div>
+
+            </div>
+        </div>
+        <div class="middle">
+            asd
+            <label class="switch">
+                <input type="checkbox" id="appearance">
+                <span class="slider"></span>
+            </label>
+        </div>
+        <div class="right-side" id="users">
+            asd
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/f17ac2bc1e.js" crossorigin="anonymous"></script>
 </body>
 </html>
