logout first steps----

--- a/base/index.html
+++ b/base/index.html
@@ -10,11 +10,22 @@
 </head>
 <body>
     <main>
+        <input type="text" name="" id="user">
+        <button id="login">login</button>
         <div id="chat"></div>
         <input type="text" name="" id="chatbox">
         <button id="send-msg">
             Send
         </button>
+
+        <hr>
+        <hr>
+
+        <div id="users">
+            
+        </div>
+
+        <button id="logout">Log out</button>
     </main>
 </body>
 </html>
