--- a/base/index.html
+++ b/base/index.html
@@ -7,33 +7,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="/socket.io/socket.io.js"></script>
-    <script type="module" src="./app.js"  defer></script>
+    <script type="module" src="./app.js" defer></script>
 </head>
 
 <body>
 
     <div class="wrapper wrapperLight">
         <div class="login">
-
             <div class="textContent">
                 <h2>Welcome back!</h2>
                 <p>We're excited to see you again!</p>
                 <h5>Username</h5>
                 <input type="text" placeholder="Username">
                 <div class="button">
-                    <a href="#"><span>Login</Button></span></a>
+                    <a href="#"><span>Login</span></a>
                 </div>
             </div>
-            <div class="theme-selector ">
-                <a href=""><h5>White</h5></a>
+            <div class="theme-selector">
+                <input type="checkbox" id="darkmode-toggle">
+                <label for="darkmode-toggle"></label>
             </div>
         </div>
-
     </div>
-
-
-       
-
 
 </body>
 
