--- a/base/index.html
+++ b/base/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <div id="login-error" style="background-color: red; width: 5rem; display: none;">ERROR</div>
+        <div id="login-error" style="background-color: red; width: 250px; display: none;">ERROR</div>
         <input type="text" name="" id="user">
         <button id="login">login</button>
         <div id="chat"></div>
