Kiíratás (Login & Logout)

--- a/base/index.html
+++ b/base/index.html
@@ -8,7 +8,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="./app.js" defer></script>
 </head>
-<body>
+<body style="background-color: gray;">
     <main>
         <div id="login-error" style="background-color: red; width: 250px; display: none;">ERROR</div>
         <input type="text" name="" id="user">
