--- a/base/index.html
+++ b/base/index.html
@@ -10,6 +10,9 @@
 </head>
 <body style="background-color: gray;">
     <main>
+        <div class="login-error">
+            Username already exist.
+        </div>
         <input type="text" name="" id="user">
         <button id="login">login</button>
         <div id="chat"></div>
