display error message

--- a/base/index.html
+++ b/base/index.html
@@ -10,8 +10,8 @@
 </head>
 <body style="background-color: gray;">
     <main>
-        <div class="login-error">
-            Username already exist.
+        <div id="login-error" style="background-color: red; width: 500px; display: none;">
+            <p>Username is already exist.</p>
         </div>
         <input type="text" name="" id="user">
         <button id="login">login</button>
