private message try

--- a/base/index.html
+++ b/base/index.html
@@ -16,7 +16,11 @@
         <input type="text" name="" id="user">
         <button id="login">login</button>
         <div id="chat"></div>
-        <input type="text" name="" id="chatbox">
+        <div id="prvtUser" style="max-width: 200px; border: 1px solid black; background-color: rgb(56, 56, 56); color: white; font-size: .8rem;">
+
+        </div>
+        <div id="clearPrvt"></div>
+        <input type="text" name="chatbox" id="chatbox">
         <button id="send-msg">
             Send
         </button>
