--- a/base/index.html
+++ b/base/index.html
@@ -30,7 +30,7 @@
             <div class="input">
                 <div id="prvtUser"></div>
                 <input type="text" id="chatbox">
-                <button type="button" id="send-msg">Küldjed geci</button>
+                <button type="button" id="send-msg">Send</button>
             </div>
         </div>
         <div class="right-side">
