--- a/base/index.html
+++ b/base/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
-    
+    <input type="text" name="" id="user">
+    <button id="login">login</button>
     <main>
-        
+
         <div class="left-side">
             <div class="content">
                 <img src="./sleeping.png" alt="">
@@ -34,7 +35,7 @@
             </div>
         </div>
         <div class="right-side">
-            <div class="content"  id="users">
+            <div class="content" id="users">
 
             </div>
             <button type="button" id="logout">Log out</button>
