--- a/base/index.html
+++ b/base/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="./app.js" defer></script>
-    <title>Document</title>
+    <title>Chat</title>
 </head>
 
 <body>
@@ -102,6 +102,7 @@
                 
             </div>
         </div>
+
     </main>
     <script src="https://kit.fontawesome.com/f17ac2bc1e.js" crossorigin="anonymous"></script>
 </body>
