add friends div

--- a/base/index.html
+++ b/base/index.html
@@ -89,6 +89,32 @@
                             <input type="checkbox" id="appearance">
                             <span class="slider"></span>
                         </label>
+
+                        <div class="friends-div">
+                            <h2>Friends</h2>
+                            <div id='addFriends' class="hidden">
+                                <i class="fa-solid fa-circle-xmark close-sf"></i>
+                                <input type="text" name="addFriendsInput" id="addFriendsInput">
+                                <div id="afUsers">
+                                    <p>adam</p>
+                                    <p>eva</p>
+                                    <p>emoke</p>
+                                </div>
+                            </div>
+                            <div id="friends" class="active-fx">
+                                <div class="friend">
+                                    <p>FRIEND EXAMPLE</p>
+                                    <i class="fa-solid fa-user-minus remove-friend"></i>
+                                </div>
+                            </div>
+                            <button id="addFriendsBtn" class="active-fx">
+                                <i class="fa-solid fa-user-plus"></i>
+                                <h3>Add Friends</h3>
+                            </button>
+                            <button id="sfRequest" class="hidden"> 
+                                <h3>Send Friend Request</h3>
+                            </button>
+                        </div>
                     </div>
                </div>
             </div>
