friend requests test template

--- a/base/index.html
+++ b/base/index.html
@@ -94,10 +94,26 @@
                             <h2>Friends</h2>
                             <div id='addFriends' class="hidden">
                                 <i class="fa-solid fa-circle-xmark close-sf"></i>
-                                <input type="text" name="addFriendsInput" id="addFriendsInput" placeholder="Enter a Username or Friend code">
+                                <input type="text" name="addFriendsInput" id="addFriendsInput"
+                                    placeholder="Enter a Username or Friend code">
                                 <div id="afUsers"> <!-- IDE KERULNEK A BARÁTOK AKIKRE RÁKERESÜNK --></div>
                             </div>
+
+                            <div id="friendRequestDiv" class="hidden">
+                                <i class="fa-solid fa-circle-xmark close-fr"></i>
+                                <div id="friendRequests">
+                                    <div class="fRequest">
+                                        <p>NAME EXAMPLE sent you a friend request</p>
+                                        <div class="frButtons">
+                                            <button type="button" class="decline">Decline</button>
+                                            <button type="button" class="accept">Accept</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <div id="friends" class="active-fx">
+                                <i class="fa-solid fa-bell sfAlert"></i>
                                 <div class="friend">
                                     <p>FRIEND EXAMPLE</p>
                                     <i class="fa-solid fa-user-minus remove-friend"></i>
