friend request lista létrehozása

--- a/base/index.html
+++ b/base/index.html
@@ -102,13 +102,13 @@
                             <div id="friendRequestDiv" class="hidden">
                                 <i class="fa-solid fa-circle-xmark close-fr"></i>
                                 <div id="friendRequests">
-                                    <div class="fRequest">
+                                    <!-- <div class="fRequest">
                                         <p>NAME EXAMPLE sent you a friend request</p>
                                         <div class="frButtons">
                                             <button type="button" class="decline">Decline</button>
                                             <button type="button" class="accept">Accept</button>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
 
