--- a/base/index.html
+++ b/base/index.html
@@ -99,11 +99,17 @@
                                 <div id="afUsers"> <!-- IDE KERULNEK A BARÁTOK AKIKRE RÁKERESÜNK --></div>
                             </div>
 
-                            <div id="friendRequestDiv" class="hidden">
+
+                            <!--FRIEND REQUEST KÉRÉSEK**************************-->
+                            <!-- *********************************************** -->
+
+                            <div id="friendRequestDiv" class="hidden"> 
                                 <i class="fa-solid fa-circle-xmark close-fr"></i>
                                 <div id="friendRequests">
                                     <!-- <div class="fRequest">
-                                        <p>NAME EXAMPLE sent you a friend request</p>
+                                        <div class="fUser">
+                                            <h5>NAME EXAMPLE</h5><p>sent you a friend request</p>
+                                        </div>
                                         <div class="frButtons">
                                             <button type="button" class="decline">Decline</button>
                                             <button type="button" class="accept">Accept</button>
@@ -111,6 +117,8 @@
                                     </div> -->
                                 </div>
                             </div>
+
+
 
                             <div id="friends" class="active-fx">
                                 <i class="fa-solid fa-bell sfAlert"></i>
