Accept friend request + adding to friend div

--- a/base/index.html
+++ b/base/index.html
@@ -122,10 +122,10 @@
 
                             <div id="friends" class="active-fx">
                                 <i class="fa-solid fa-bell sfAlert"></i>
-                                <div class="friend">
+                                <!-- <div class="friend">
                                     <p>FRIEND EXAMPLE</p>
                                     <i class="fa-solid fa-user-minus remove-friend"></i>
-                                </div>
+                                </div> -->
                             </div>
                             <button id="addFriendsBtn" class="active-fx">
                                 <i class="fa-solid fa-user-plus"></i>
