--- a/base/index.html
+++ b/base/index.html
@@ -26,10 +26,36 @@
                 <i class="fa-solid fa-circle-user profile-pic"></i>
                 <div class="profile-settings hidden">
                     <i class="fa-solid fa-circle-xmark exit"></i>
-                    <label class="switch">
+                    <!-- <label class="switch">
                         <input type="checkbox" id="appearance">
                         <span class="slider"></span>
-                    </label>
+                    </label> -->
+
+                    <div class="switch">
+                        <img src="https://png.pngtree.com/png-vector/20240929/ourmid/pngtree-soft-2d-cloud-png-image_13980627.png" class="cloud cloud-1" alt="">
+                        <img src="https://png.pngtree.com/png-vector/20240929/ourmid/pngtree-soft-2d-cloud-png-image_13980627.png" class="cloud cloud-2" alt="">
+                        <img src="https://png.pngtree.com/png-vector/20240929/ourmid/pngtree-soft-2d-cloud-png-image_13980627.png" class="cloud cloud-3" alt="">
+
+                        <div class="hill hill-1"></div>
+                        <div class="hill hill-2"></div>
+
+                        <div class="circle circle-1"></div>
+                        <div class="circle circle-2"></div>
+
+                        <div class="star star-1"></div>
+                        <div class="star star-2"></div>
+                        <div class="star star-3"></div>
+                        <div class="star star-4"></div>
+                        <div class="star star-5"></div>
+                        <div class="star star-6"></div>
+                        <div class="star star-7"></div>
+                        <div class="star star-8"></div>
+                        <div class="star star-9"></div>
+                        <div class="star star-10"></div>
+
+                        <div class="slider"></div>
+                    </div>
+
                 </div>
            </div>
         </div>
