--- a/base/index.html
+++ b/base/index.html
@@ -16,6 +16,7 @@
     <div class="container content">
         <div class="left-side">
             <div class="left-side-top">
+                <i class="fa-solid fa-bars breakpoint"></i>
                 <i class="fa-solid fa-universal-access left-icon"></i>
                 <hr class="line">
                 <div class="channels">     
