profile settings layout

--- a/base/index.html
+++ b/base/index.html
@@ -98,16 +98,21 @@
 
                             <div class="settings-content">
 
-                                <div class="profile-options-div active-fx">
+                                <div class="profile-options-div active">
                                     <div class="settings-header">
                                         <h1>Profile</h1>
                                     </div>
-                                    <div class="settings-options">
+                                    <div class="profile-options">
                                         <div class="pfp">
-                                            <img src="./sleeping.png" alt="pfp" title="pfp">
+                                            <img src="./hide-facebook-profile-picture-notification.jpg" alt="pfp" title="pfp">
                                         </div>
                                         <div class="profile-data">
-                                            
+                                            <div class="username">
+                                                <h3>ASD</h3>
+                                            </div>
+                                            <div class="friendID">
+                                                <p>AIasdA831jcaXx</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
