options select fix

--- a/base/index.html
+++ b/base/index.html
@@ -106,7 +106,7 @@
 
                             <div class="settings-content">
 
-                                <div class="profile-options-div active">
+                                <!-- <div class="profile-options-div active">
                                     <div class="settings-header">
                                         <h1>Profile</h1>
                                     </div>
@@ -123,11 +123,11 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-
-                                <!-- <div class="start-options-div active">
-                                    <p>Válassz valamit...</p>
                                 </div> -->
+
+                                <div class="start-options-div active">
+                                    <p>Choose something...</p>
+                                </div>
                                 
                                 <div class="theme-options-div hidden">
                                     <div class="settings-header">
