--- a/base/index.html
+++ b/base/index.html
@@ -70,8 +70,14 @@
             </div>
         </div>
     </div>
+    <div class="loadingScreenWrapper hidden">
+        <div class="progress-bar">
+            <div class="progress-fill"></div>
+        </div>
+        <div class="loading-text">Cooking Sigmas...</div>
+    </div>
 
-    <main>
+    <main class="hidden">
         <div class="top">
             <div class="bk-icon">
                 <i class="fa-solid fa-bars breakpoint"></i>
