--- a/base/index.html
+++ b/base/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <div class="loadingScreenWrapper hidden">
+    <div class="loadingScreenWrapper ">
         <div class="progress-bar">
             <div class="progress-fill"></div>
         </div>
